0030873: Make ReShape tool resistant to replacement loops